# stable-audio-tools

./: .gitignore  .pre-commit-config.yaml  2025_Oct_07_pipdeptree_freeze.txt  2025_Oct_07_requirements.txt  2025_Oct_29_pipdeptree_freeze_requirements.txt  LICENSE  README.md  TRAINING_FOR_NOOBS.md  acid_dataset_config.json  acid_paths_md.py  acid_paths_md_pre_encode.py  acid_pe_dataset_config.json  am_dataset_config.json  am_pe_dataset_config.json  arthur.py  dataset_config (1).json:Zone.Identifier  dataset_config.json  dataset_config.json:Zone.Identifier  defaults.ini  fit_pca.py  kickbass_dataset_config.json  kickbass_paths_md_pre_encode.py  kickbass_pe_dataset_config.json  kickbass_val_dataset_config.json  kickbass_val_pe_dataset_config.json  model_config.json  paths_md.py  pe_dataset_config.json  pre-encode.bat  pre_encode.py  pyproject.toml  requirements.txt  run_gradio.py  setup.py  test6.ini  train.bat  train.py  train_autoencoder.py  train_diffusion_uncond.py  train_local.sh  (+7 more)
.github/workflows/: pre-commit.yaml  test.yaml
LICENSES/: LICENSE_ADP.txt  LICENSE_DESCRIPT.txt  LICENSE_MAMBA.txt  LICENSE_NVIDIA.txt  LICENSE_XTRANSFORMERS.txt
config/: txt2audio.json
docs/: autoencoders.md  conditioning.md  datasets.md  diffusion.md  pre_encoding.md  pretransforms.md
harmonai/data/: dataset.py  utils.py
harmonai/inference/: sampling.py
harmonai/models/: __init__.py  autoencoders.py  blocks.py  diffusion.py  discriminators.py  factory.py  pretransforms.py
harmonai/training/: autoencoders.py  diffusion.py  factory.py
harmonai_tools/data/: dataset.py
harmonai_tools/inference/: generation.py  sampling.py  utils.py
harmonai_tools/interface/: gradio.py
harmonai_tools/models/: adp.py  autoencoders.py  blocks.py  (+12 more)
pre_encoded/: details.json
sao_small/: acid_v1_base_model_config.json  acid_v2_base_model_config.json  acid_v3_base_model_config.json  base_model_config.json  kickbass_v1_base_model_config.json  model_config.json  temp_acid_base_model_config.json
scripts/: ds_zero_to_pl_ckpt.py
stable-open-model-files/: dataset_config.json  model_config.json
stable_audio_tools/: __init__.py
stable_open_model_files/: custom_metadata.py  dataset_config.json  model_config.json:Zone.Identifier
(+248 files in other folders)
