[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stable-audio-tools"
version = "0.0.20"
authors = [
    {name = "Stability AI"}
]
description = "Training and inference tools for generative audio models from Stability AI"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Stability-AI/stable-audio-tools"
"Bug Tracker" = "https://github.com/Stability-AI/stable-audio-tools/issues"

[tool.setuptools.packages.find]
include = ["stable_audio_tools*"]